# python-poetry-starter

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: pre-commit-usage.md
